# rawkit

./: .gitignore  CACHE.md  CHANGELOG.md  EVALUATION.md  HANDOFF.md  PERF-FIX.md  PERF.md  README.md  TODO.md  USAGE.md  extract_thumb_from_raw.py  pyproject.toml
_thinking/: ARCHIVE_COMPRESSOR_SPEC.md  JXL_AS_ENGINE_AUDIT.md  JXL_BET_AUDIT.md  NEW_FORMAT_AUDIT.md  PRODUCT_ROADMAP.md  VC_TAKE.md
docs/archive/: NOTE.md  README.md  USAGE.md
scripts/: bench_exif.py  fetch_samples.py
src/rawkit/: _cache.py  _exif_lite.py  _resize.py  aggregate.py  cli.py  exif.py  extract.py  preview.py  query.py  render.py  stats.py
src/rawkit/cli/: __init__.py  exif.py  ls.py  thumb.py
tests/: test_aggregate.py  test_cache.py  test_cli.py  test_exif.py  test_exif_lite.py  test_extract.py  test_info.py  test_organize.py  test_preview.py  test_query.py  test_render.py  test_resize.py  test_reveal.py  test_stats.py  test_summary.py
tests/fixtures/: extra_samples.toml
